--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Dreams</title>
 </head>
 <body>
-   <div> <h3><i>Do hardwork to get your success in your footsteps.</i> Do it just for yourself.</h3></div>
+   <div> <h3><i>Do hardwork <s>to get</s> your success in your footsteps.</i> Do it just for yourself.</h3></div>
 </body>
 </html>
