--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dreams</title>
 </head>
 <body>
-   <div> <h3><i>Do hardwork <s>to get</s> your success in your Doorstep.</i> Do it just for Pakistan And yourself.</h3>
+   <div> <h3><i>Do hardwork to get your success at your Doorstep.</i> Do it, for Pakistan And yourself.</h3>
     <br>
    From Muhammad Furqan Khan.
 </h3></div>
